--- a/main.ipynb
+++ b/main.ipynb
@@ -16,6 +16,23 @@
    "source": [
     "print(\"Hello world\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I love coding\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"I love coding\")"
+   ]
   }
  ],
  "metadata": {
